compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_monitor_non_actor.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/monitor_non_actor.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × monitor target is not an actor
   ╭─[tests/fixtures/diagnostics/actors/monitor_non_actor.ml:3:3]
 2 │   let not_pid = "not an actor";
 3 │   monitor(not_pid);
   ·   ────────┬───────
   ·           ╰── `not_pid` is a value, not a pid
 4 │   dbg("done")
   ╰────
  help: send to the result of `spawn { ... }`
