compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_spawn_without_receive.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/spawn_without_receive.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × actor body never receives
   ╭─[tests/fixtures/diagnostics/actors/spawn_without_receive.ml:2:19]
 1 │     fn main() {
 2 │ ╭─▶   let pid = spawn {
 3 │ │       dbg("not a receive loop")
 4 │ ├─▶   };
   · ╰──── stage0 actors must contain at least one receive point
 5 │       send(pid, "hello")
   ╰────
  help: try: spawn { receive { msg -> dbg(msg) } }
