compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_body_main_value_tail_unsupported.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/diagnostics/body/main-value-tail-unsupported.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported main body
   ╭─[tests/fixtures/diagnostics/body/main-value-tail-unsupported.ml:1:11]
 1 │ ╭─▶ fn main() {
 2 │ │     1
 3 │ ├─▶ }
   · ╰──── stage0 expects main to produce output or actor actions
   ╰────
  help: try: fn main() { dbg("hello world") }
