compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_invalid_string_escape.snap
---
source: tests/fixtures.rs
assertion_line: 5793
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/invalid_string_escape.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/invalid_string_escape.ml:2:7]
 1 │ fn main() {
 2 │   dbg("bad \q escape")
   ·       ───────┬───────
   ·              ╰── invalid string literal: invalid escape \q at 6 in "bad \q escape"
 3 │ }
   ╰────
