compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_match_non_exhaustive.snap
---
source: tests/fixtures.rs
assertion_line: 729
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/match_non_exhaustive.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × non-exhaustive match expression
   ╭─[tests/fixtures/diagnostics/types/match_non_exhaustive.ml:2:7]
 1 │     fn main() {
 2 │ ╭─▶   dbg(match 1 {
 3 │ │       0 -> "zero"
 4 │ ├─▶   })
   · ╰──── stage0 match lowering currently requires a final wildcard or binder arm
 5 │     }
   ╰────
  help: add a final `_ -> ...` arm
