compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_match_variant_non_exhaustive.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/match_variant_non_exhaustive.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × non-exhaustive match expression
   ╭─[tests/fixtures/diagnostics/types/match_variant_non_exhaustive.ml:5:7]
 4 │       let value = Some(1);
 5 │ ╭─▶   dbg(match value {
 6 │ │       Some(value) -> value
 7 │ ├─▶   })
   · ╰──── the match arms do not cover every value of the scrutinee type
 8 │     }
   ╰────
  help: add the missing constructors, list cases, or a final `_ -> ...` arm
